[package]
name = "rocketmq-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
rocketmq-rust = { workspace = true }
rocketmq-common = { workspace = true }
rocketmq-remoting = { workspace = true }
rocketmq-runtime = { workspace = true }

anyhow.workspace = true
env_logger.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

#json spupport
serde.workspace = true
serde_json.workspace = true

futures-core = "0.3.0"
futures-sink = "0.3.0"
futures-io = { version = "0.3.0" }
futures-util = { version = "0.3.31" }
futures = "0.3.31"
bytes = "1.8.0"
config.workspace = true
parking_lot.workspace = true

clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"

[[bin]]
name = "mqadmin-rust"
path = "src/command/mqadmin_startup.rs"